Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.32
-
None
Description
Description of problem:
Having a consumer that (in a loop):
- creates an autoDelete queue
- subscribes to it
- unsubscribes
against a HA cluster, primary broker memory consumption grows over the time.
Version-Release number of selected component (if applicable):
0.34-6
0.34-15
How reproducible:
100%
Steps to Reproduce:
1. Start 3 brokers in a HA cluster (mine reproducer uses options:
qpidd --port=5672 --store-dir=_5672 --log-to-file=qpidd.5672.log --data-dir=_5672 --auth=no --log-to-stderr=no --ha-cluster=yes --ha-brokers-url=localhost:5672,localhost:5673,localhost:5674,localhost:5675,localhost:5676 --ha-replicate=all --acl-file=/root/qpidd.acl --link-maintenance-interval=5
)
2. Run simple qpid-receive in a loop:
while true; do
qpid-receive -a "autoDelQueue; {create:always, node:{ x-declare:
}}"
sleep 0.1
done
3. Monitor memory usage of primary broker.
Actual results:
- memory usage grows over the time (just of primary broker, backup ones are OK)
Expected results:
- no memory usage growth
Additional info:
- I think HA cluster is necessary condition (i.e. bug does not occur on standalone broker), but I will test it
See also https://bugzilla.redhat.com/show_bug.cgi?id=1350023 .