QPID-7326: Memory bloat on HA primary broker

Removed left-over code that was keeping queues in an unused map.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1750417 13f79535-47bb-0310-9956-ffa450edef68